2025-05 Feature Update for Version 2505 (5.0.10)

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-breakpoints.css">
@@ -55,8 +55,11 @@
             <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
             <a href="eicw/eicw.html" class="nav-item">EICW</a>
             <a href="#" class="nav-item active">Blog</a>
-            <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-                    title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+            <a href="#" class="nav-item">
+                <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+                    <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
+                </button>
+            </a>
         </nav>
     </header>
 
