--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-breakpoints.css">
@@ -61,8 +61,11 @@
       <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
       <a href="eicw.html" class="nav-item active">EICW</a>
       <a href="../blog.html" class="nav-item">Blog</a>
-      <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-          title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+      <a href="#" class="nav-item">
+        <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+          <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
+        </button>
+      </a>
     </nav>
   </header>
 
@@ -103,17 +106,17 @@
               <button class="btn">Improving Existing Wayfinding Designs.</button>
             </a>
             <a href="eicw-2.html">
-              <button class="btn">Let's get more experimental!</button>
+              <button class="btn">Enhancing Clarity & Fine-Tunes</button>
             </a>
             <a href="eicw-3.html">
-              <button class="btn">Showcasing my own ideas.</button>
+              <button class="btn">Showcasing My Own Ideas.</button>
             </a>
             <a href="#">
-              <button class="btn">CCL6 and the way forward.</button>
+              <button class="btn">CCL6 & The Way Forward.</button>
             </a>
-            <!-- <a href="eicw-5.html">
-              <button class="btn">The Buses' side of things needs love too!</button>
-            </a> -->
+            <a href="eicw-5.html">
+              <button class="btn">Redesigning The Buses' Side Of Things</button>
+            </a>
           </div>
         </div>
       </div>
@@ -902,37 +905,6 @@
     </div>
   </section>
 
-
-  <!-- Author -->
-  <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
-    <div class="wbnrfz_details_body wow fadeInUp" data-wow-delay="100ms">
-      <div class="container container-xxl container-mobile">
-        <div class="details_info">
-          <div class="row justify-content-center">
-            <div class="col-lg-12">
-              <div class="info justify-content-center">
-                <!-- Author -->
-                <div class="about-author d-flex p-4">
-                  <div class="bio mr-0 text-center">
-                    <img src="../img/bg-img/about.png" alt="profile" class="img-blog-profile img-fluid mb-4">
-                  </div>
-                  <div class="desc">
-                    <h3 style="font-size: 30px; font-weight: bold;">Nurafian Zulkifli</h3>
-                    <p class="text-left">Passionate about Technology and Designs - mainly UI Designs, Wayfinding and
-                      Signage Designs.<br><br> I also
-                      enjoy replicating stuffs that interests me.</p>
-                  </div>
-                </div>
-
-
-              </div>
-            </div>
-          </div>
-
-
-        </div>
-      </div>
-  </section>
 
   <footer class="footer-area">
     <div class="container">
