--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" href="img/core-img/favicon.png">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-breakpoints.css">
@@ -61,8 +61,11 @@
       <a href="#" class="nav-item active">Works By NRFZ</a>
       <a href="eicw/eicw.html" class="nav-item">EICW</a>
       <a href="./blog.html" class="nav-item">Blog</a>
-      <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-          title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+      <a href="#" class="nav-item">
+        <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+          <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
+        </button>
+      </a>
     </nav>
   </header>
 
@@ -80,7 +83,8 @@
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
                     </li>
-                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works By NRFZ
+                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> Works
+                        By NRFZ
                       </a>
                     </li>
                   </ol>
@@ -91,7 +95,7 @@
           </div>
           <!-- Collapsible Header -->
           <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
-            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;"  title="Filter/Sort">
+            aria-expanded="false" aria-controls="portfolioFilter" style="cursor: pointer;" title="Filter/Sort">
             <i class="fa-solid fa-chevron-down nav-chev"></i>
           </div>
         </div>
@@ -337,7 +341,7 @@
               <div class="hover-content-blog">
                 <h4>Friends Forever Logo Design</h4>
                 <a class="info" href="worksbynrfz/ffl.html" class="portfolio-img"><i
-                  class="fa-solid fa-arrow-right"></i></a>
+                    class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -349,7 +353,7 @@
               <div class="hover-content-blog">
                 <h4>Infographic Resume</h4>
                 <a class="info" href="worksbynrfz/igra1.html" class="portfolio-img"><i
-                  class="fa-solid fa-arrow-right"></i></a>
+                    class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -361,7 +365,7 @@
               <div class="hover-content-blog">
                 <h4>COVID-19 Shopping Habits Infographic</h4>
                 <a class="info" href="worksbynrfz/igra2.html" class="portfolio-img"><i
-                  class="fa-solid fa-arrow-right"></i></a>
+                    class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
