2025-05 Cumulative Update for Version 2505 (5.0.11)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-breakpoints.css">
@@ -193,8 +193,8 @@
               <a href="img/cs-light.png" id="cs" class="portfolio-img">
                 <img src="img/cs-light.png" id="cs-img" class="img-fluid" alt="cs">
               </a>
-              <hr>
             </div>
+            <hr>
           </div>
 
           <!-- User Interfaces - LCD Screens -->
@@ -223,9 +223,9 @@
                 <a href="img/lcd2-light.png" id="lcd2" class="portfolio-img">
                   <img src="img/lcd2-light.png" id="lcd2-img" class="img-fluid" alt="lcd2">
                 </a>
-                <hr>
               </div>
             </div>
+            <hr>
           </div>
         </div>
       </div>
@@ -258,9 +258,8 @@
               <a href="img/wfs2-light.png" id="wfs2" class="portfolio-img">
                 <img src="img/wfs2-dark.png" id="wfs2-img" class="img-fluid" alt="wfs2">
               </a>
-              <hr>
             </div>
-
+            <hr>
           </div>
 
         </div>
@@ -300,8 +299,7 @@
                     the wayfinding
                     system better. Whether the ideas worked in real-life or not, is a different story. Well, if you have
                     not tried, you will
-                    never know!
-                    This microsite is an extension to my Blog Posts, which can be found below!</p>
+                    never know!</p>
                 </div>
               </div>
 
