2025-05 Cumulative Update for Version 2505 (5.0.11)

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>EICW - Implementation Brainstorming | WBN</title>
+  <title>Train Delays Tracker | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -85,7 +85,7 @@
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">Train Delays Checker V4</h1>
+                <h1 class="brc">Train Delays Tracker</h1>
               </div>
             </div>
           </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="col-sm-4 single_catagory">
               <span>Project Year</span>
-              <h4>2025 (Version 4)</h4>
+              <h4>2025 (Version 5)</h4>
             </div>
             <div class="col-sm-4 single_catagory">
               <span>Share Project</span>
@@ -155,7 +155,7 @@
 
 
             <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
-              <a href="https://i.imgur.com/bULZRTC.png" class="portfolio-img"><img src="https://i.imgur.com/bULZRTC.png"
+              <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img"><img src="https://i.imgur.com/XPq0mvF.png"
                   class="img-fluid" alt="cover-page"></a>
             </div>
 
@@ -163,14 +163,14 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/XcpMF3q.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/XcpMF3q.png" class="img-fluid" alt="web-2"></a>
+                    <a href="https://i.imgur.com/Q4bz8gp.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/Q4bz8gp.png" class="img-fluid" alt="web-2"></a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/4z7CP8j.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/4z7CP8j.png" class="img-fluid" alt="web-3"></a>
+                    <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img"><img
+                        src="https://i.imgur.com/xKLVJbC.png" class="img-fluid" alt="web-3"></a>
                   </div>
                 </div>
               </div>
@@ -286,11 +286,11 @@ function updateThemeIcon(theme) {
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/5I39ojc.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/AwqBdiJ.png')";
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/5I39ojc.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/AwqBdiJ.png')";
       }
     }
   </script>
