--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-year="2024">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/iRDMx37.png" alt="tdc-v3">
+                        <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
                         <div class="hover-content-blog">
-                            <h4>Train Delays Checker V4</h4>
+                            <h4>Train Delays Tracker</h4>
                             <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
