2025-05 Cumulative Update for Version 2505 (5.0.12)

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -68,7 +68,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-tdc"
-    style="background-image: url(https://i.imgur.com/3nt0PoJ.png); height: 100vh;">
+    style="background-image: url(https://i.imgur.com/xCjN8gt.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -164,8 +164,8 @@
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
-                    <a href="https://i.imgur.com/Q4bz8gp.png" class="portfolio-img" id="tdt2" alt="tdt2"><img
-                        src="https://i.imgur.com/Q4bz8gp.png" class="img-fluid" id="tdt2-img" alt="tdt2-img"></a>
+                    <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" id="tdt2" alt="tdt2"><img
+                        src="https://i.imgur.com/JqT4T3I.png" class="img-fluid" id="tdt2-img" alt="tdt2-img"></a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -282,7 +282,6 @@
     function updateHrefForDarkMode() {
       /* Banners */
       const tdcPage = document.getElementById('cv-tdc');
-      // const coverPage = document.getElementById('coverPage');
 
       const isDarkMode = document.body.classList.contains('dark-mode');
 
@@ -298,8 +297,7 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/AwqBdiJ.png')";
-        // coverPage.style.backgroundImage = "url('./img/iu-dark.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/xCjN8gt.png')";
 
         tdt1_link.href = 'https://i.imgur.com/FpOufoV.png';
         tdt1_img.src = 'https://i.imgur.com/FpOufoV.png';
@@ -313,14 +311,13 @@
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/AwqBdiJ.png')";
-        // coverPage.style.backgroundImage = "url('https://i.imgur.com/XPq0mvF.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/xCjN8gt.png')";
 
         tdt1_link.href = 'https://i.imgur.com/XPq0mvF.png';
         tdt1_img.src = 'https://i.imgur.com/XPq0mvF.png';
 
-        tdt2_link.href = 'https://i.imgur.com/Q4bz8gp.png';
-        tdt2_img.src = 'https://i.imgur.com/Q4bz8gp.png';
+        tdt2_link.href = 'https://i.imgur.com/JqT4T3I.png';
+        tdt2_img.src = 'https://i.imgur.com/JqT4T3I.png';
 
         tdt3_link.href = 'https://i.imgur.com/xKLVJbC.png';
         tdt3_img.src = 'https://i.imgur.com/xKLVJbC.png';
