--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -158,7 +158,7 @@
             <div class="single-portfolio-content">
               <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
               <div class="hover-content-blog">
-                <h4>Train Delays Checker V4</h4>
+                <h4>Train Delays Tracker</h4>
                 <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
