--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -68,7 +68,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-tdc"
-    style="background-image: url(https://i.imgur.com/xCjN8gt.png); height: 100vh;">
+    style="background-image: url(https://i.imgur.com/dRoqS9F.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -297,7 +297,7 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/xCjN8gt.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/dRoqS9F.png')";
 
         tdt1_link.href = 'https://i.imgur.com/FpOufoV.png';
         tdt1_img.src = 'https://i.imgur.com/FpOufoV.png';
@@ -311,7 +311,7 @@
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/xCjN8gt.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/dRoqS9F.png')";
 
         tdt1_link.href = 'https://i.imgur.com/XPq0mvF.png';
         tdt1_img.src = 'https://i.imgur.com/XPq0mvF.png';
