--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>EICW | NRFZ</title>
+  <title>Proposed UI/UX Changes | EICW</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -265,7 +265,7 @@
                   </a>
                 </div>
 
-                <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;" muted
+                <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;"
                   width="100%" class="column-vid">
                   <source src="img/staris2-red.mp4" type="video/mp4">
                   Your browser does not support the video tag.
