--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -60,7 +60,7 @@
             <a href="../index.html" class="nav-item">Home</a>
             <a href="../about.html" class="nav-item">About</a>
             <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="#" class="nav-item active">EICW</a>
+            <a href="eicw.html" class="nav-item active">EICW</a>
             <a href="../blog.html" class="nav-item">Blog</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
