--- a/worksbynrfz/igra1.html
+++ b/worksbynrfz/igra1.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="description" content>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Infographic Resume | WBN</title>
