2025-07 Cumulative Update for Version 2507 (5.1.2)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -146,6 +146,9 @@
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
+                <a href="#bcr">
+                  <button class="btn">Bus Card Reader UI (LTA)</button>
+                </a>
                 <a href="#bat">
                   <button class="btn">Bus Arrival Timings (LTA)</button>
                 </a>
@@ -182,6 +185,65 @@
     <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
+
+          <!-- Bus Card Reader UI (LTA) -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="info justify-content-center">
+
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;" id="bcr">Bus Card
+                Reader UI (LTA)
+              </h2>
+              </h2>
+              <p style="text-align: left;">The current Bus Card Readers are getting replaced! As such I have come up
+                with a design whereby the Interface match the ones used on the MRT systems, particularly the NSEWL and
+                CCL. For those MRT lines, they too, are getting their faregates replaced. As we can see, we're
+                progressively going for a more full-screen approach, where you will tap your cards on the screen itself.
+              </p>
+
+              <p style="text-align: left;">While the User Interface for the upcoming Card Readers are not yet known,
+                these are what I envisioned the designs to be!</p>
+
+              <div class="row">
+
+                <div class="column column-pic">
+                  <figcaption>
+                    <a href="img-2/bcr-compare-light.png" id="bcr2" class="portfolio-img ">
+                      <img src="img-2/bcr-compare-light.png" id="bcr2-img" class="img-fluid cp-img" alt="bcr2">
+                    </a>
+                    <p style="text-align: center;">📸: <br>
+                      - <a
+                        href="//images.squarespace-cdn.com/content/v1/5bcfc8c07a1fbd730b2ba933/1558377402895-3VI3FNHXOZQWI997KRES/MRT+gate+to+tap.jpg">Current
+                        MRT Card Reader</a><br>
+                      - <a href="https://x.com/big_pedestrian/status/1782216274090836184/photo/1">Current Bus Card
+                        Reader (via X)</a>
+                    </p>
+                  </figcaption>
+                </div>
+
+                <div class="column column-pic">
+                  <figcaption>
+                    <a href="img-2/bcr-tap-light.png" id="bcr3" class="portfolio-img ">
+                      <img src="img-2/bcr-tap-light.png" id="bcr3-img" class="img-fluid cp-img" alt="bcr3">
+                    </a>
+                  </figcaption>
+                </div>
+
+                <div class="banner-eicw">
+                  <a href="img-2/bcr-light.png" id="bcr1" class="portfolio-img">
+                    <img src="img-2/bcr-light.png" id="bcr1-img" class="img-fluid" alt="bcr1">
+                  </a>
+
+                  <a href="img-2/bcr-var-light.png" id="bcr4" class="portfolio-img">
+                    <img src="img-2/bcr-var-light.png" id="bcr4-img" class="img-fluid" alt="bcr4">
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+
+          <hr>
 
           <!-- Bus Arrival Timings (LTA) -->
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
@@ -266,8 +328,8 @@
                   </a>
                 </div>
 
-                <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;"
-                  width="100%" class="column-vid">
+                <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;" width="100%"
+                  class="column-vid">
                   <source src="img/staris2-red.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                 </video>
