--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -194,10 +194,10 @@
                 Reader UI (LTA)
               </h2>
               </h2>
-              <p style="text-align: left;">The current Bus Card Readers are getting replaced! As such I have come up
+              <p style="text-align: left;">The current Bus Card Readers are getting replaced! As such, I have come up
                 with a design whereby the Interface match the ones used on the MRT systems, particularly the NSEWL and
                 CCL. For those MRT lines, they too, are getting their faregates replaced. As we can see, we're
-                progressively going for a more full-screen approach, where you will tap your cards on the screen itself.
+                progressively going for a more full-screen approach, where you will tap your card on the screen itself.
               </p>
 
               <p style="text-align: left;">While the User Interface for the upcoming Card Readers are not yet known,
