--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -322,6 +322,17 @@
                   </figcaption>
                 </div>
 
+                <div class="column column-pic">
+                  <figcaption>
+                    <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
+                      <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
+                    </a>
+                    <p style="text-align: center;">Revamped STARiS 2.0 UI, on one of the KSFC Trains. <b>New</b> Line
+                      Diagram Layout and Next Station Interface
+                    </p>
+                  </figcaption>
+                </div>
+
                 <div class="banner-eicw">
                   <a href="img/lcd3-light.png" id="lcd3" class="portfolio-img">
                     <img src="img/lcd3-light.png" id="lcd3-img" class="img-fluid" alt="lcd3">
