2025-09 Cumulative Update for Version 5.0 (5.1.3)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -302,6 +302,19 @@
               <div class="row">
                 <div class="column column-pic">
                   <figcaption>
+                    <a href="img/staris2-B.png" id="staris2-b" class="portfolio-img ">
+                      <img src="img/staris2-B.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
+                    </a>
+                    <p style="text-align: center;">Current STARiS 2.0 UI, on most of the KSFB/C Trains. <b>Older</b>
+                      Line
+                      Diagram Layout.
+                    </p>
+                  </figcaption>
+                </div>
+
+
+                <div class="column column-pic">
+                  <figcaption>
                     <a href="img/staris2-C.png" id="staris2-c" class="portfolio-img ">
                       <img src="img/staris2-C.png" id="staris2-c-img" class="img-fluid cp-img" alt="staris2-c">
                     </a>
@@ -313,22 +326,22 @@
 
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/staris2-B.png" id="staris2-b" class="portfolio-img ">
-                      <img src="img/staris2-B.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
+                    <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
+                      <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: center;">Current STARiS 2.0 UI, on the KSFC Trains. <b>Older</b> Line
-                      Diagram Layout.
+                    <p style="text-align: center;">Revamped STARiS 2.0 UI, on one of the KSFC Trains. <b>Updated</b>
+                      Line
+                      Diagram Layout and <b>New</b> Next Station Interface
                     </p>
                   </figcaption>
                 </div>
 
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
-                      <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
+                    <a href="img-2/staris2-red.png" id="staris2-b" class="portfolio-img ">
+                      <img src="img-2/staris2-red.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
                     </a>
-                    <p style="text-align: center;">Revamped STARiS 2.0 UI, on one of the KSFC Trains. <b>New</b> Line
-                      Diagram Layout and Next Station Interface
+                    <p style="text-align: center;">Revamped STARiS 2.0 UI. <b>Proposed Redesign</b>
                     </p>
                   </figcaption>
                 </div>
