--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -352,6 +352,12 @@
                   </a>
                 </div>
 
+                <!-- <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;" width="100%"
+                  class="column-vid">
+                  <source src="img/staris2-red.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video> -->
+
                 <iframe width="1280" height="768" src="https://www.youtube.com/embed/Zl0TNsjguvs?si=_193tDT6TsT1OBMc"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
