2025-09 Cumulative Update for Version 5.0 (5.1.4)

--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -352,17 +352,17 @@
                   </a>
                 </div>
 
-                <!-- <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;" width="100%"
+                <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;" width="100%"
                   class="column-vid">
                   <source src="img/staris2-red.mp4" type="video/mp4">
                   Your browser does not support the video tag.
-                </video> -->
+                </video>
 
-                <iframe width="1280" height="768" src="https://www.youtube.com/embed/Zl0TNsjguvs?si=_193tDT6TsT1OBMc"
+                <!-- <iframe width="1280" height="768" src="https://www.youtube.com/embed/Zl0TNsjguvs?si=_193tDT6TsT1OBMc"
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
